# shell-snoop

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  default.nix  flake.nix  justfile
.github/workflows/: build.yml
src/: main.rs  shell-snoop.c
