[package]
name = "shell-snoop"
version = "0.4.0"
edition = "2021"

[dependencies]
caps = "0.5.2"
libproc = "0.14.2"
rev_lines = "0.2.2"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
# for profiling
# debug = 1
